# promptsearch

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: quickstart.py
src/promptsearch/: __init__.py  cli.py  core.py  dashboard.py  logger.py
