[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptsearch"
version = "0.2.0"
description = "Automated Reverse Prompt Engineering: Evolve system prompts from target outputs."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Kiran Banakar", email = "kiranbanakar512@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "numpy",
    "tqdm",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.scripts]
promptsearch-ui = "promptsearch.cli:run_dashboard"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

